# RANSAC-Rigid-Transform

./: CMakeLists.txt  README.md
include/: RANSAC_icp.hpp
src/: main.cpp
